crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_type__tests__modify_column_type_with_unique_index@modify_column_type_with_unique_index_modify_column_type_with_unique_index_sqlite.snap
---
source: crates/vespertide-query/src/sql/modify_column_type.rs
expression: sql
---
CREATE TABLE "users_temp" ( "id" integer NOT NULL, "email" varchar(255) );
INSERT INTO "users_temp" ("id", "email") SELECT "id", "email" FROM "users";
DROP TABLE "users";
ALTER TABLE "users_temp" RENAME TO "users";
CREATE UNIQUE INDEX "idx_email" ON "users" ("email")
