crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_type__tests__modify_enum_types@modify_enum_types_enum_name_changed_postgres.snap
---
source: crates/vespertide-query/src/sql/modify_column_type.rs
expression: sql
---
CREATE TYPE "users_new_status" AS ENUM ('active', 'inactive');
ALTER TABLE "users" ALTER COLUMN "status" TYPE users_new_status;
DROP TYPE "users_old_status"
