crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_type__tests__modify_enum_types@modify_enum_types_enum_same_values_postgres.snap
---
source: crates/vespertide-query/src/sql/modify_column_type.rs
expression: sql
---
ALTER TABLE "users" ALTER COLUMN "status" TYPE status
