crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_type__tests__modify_enum_types@modify_enum_types_enum_to_text_sqlite.snap
---
source: crates/vespertide-query/src/sql/modify_column_type.rs
expression: sql
---
CREATE TABLE "users_temp" ( "status" text );
INSERT INTO "users_temp" ("status") SELECT "status" FROM "users";
DROP TABLE "users";
ALTER TABLE "users_temp" RENAME TO "users"
