crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_type__tests__modify_enum_types@modify_enum_types_enum_values_changed_postgres.snap
---
source: crates/vespertide-query/src/sql/modify_column_type.rs
expression: sql
---
CREATE TYPE "users_status_new" AS ENUM ('active', 'inactive', 'pending');
ALTER TABLE "users" ALTER COLUMN "status" TYPE "users_status_new" USING "status"::text::"users_status_new";
DROP TYPE "users_status";
ALTER TYPE "users_status_new" RENAME TO "users_status"
